# fuse-rm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  fuse-rm.service  package
pkgconfig/: fuse3.pc
src/: direntry.rs  jsonmetadata.rs  main.rs  rmxfs.rs
test-data/: ipsum.epub  lorem.txt  test.py
test-data/source/: 462c4853-378f-4b76-a265-ea4ca5581049.content  462c4853-378f-4b76-a265-ea4ca5581049.epubindex  462c4853-378f-4b76-a265-ea4ca5581049.metadata  462c4853-378f-4b76-a265-ea4ca5581049.pagedata  90e4bbaa-cec6-478f-bd08-aa1fa4b58fe8.metadata  a44b5dee-cf0f-4e06-a0d1-458317c60d5f.content  a44b5dee-cf0f-4e06-a0d1-458317c60d5f.epub  a44b5dee-cf0f-4e06-a0d1-458317c60d5f.epubindex  a44b5dee-cf0f-4e06-a0d1-458317c60d5f.metadata  a93bea92-3b54-462f-b9f0-858c876c936f.content  a93bea92-3b54-462f-b9f0-858c876c936f.metadata  c180a2a6-fab9-4ba5-9e7f-3a71f9a1bd09.content  c180a2a6-fab9-4ba5-9e7f-3a71f9a1bd09.metadata  c180a2a6-fab9-4ba5-9e7f-3a71f9a1bd09.pagedata  e58af4c2-328a-4a4a-b204-8c8f8a12933e.content  f27527b8-62d4-4e44-9511-43bdf275d364.content  f27527b8-62d4-4e44-9511-43bdf275d364.metadata  hw.txt
