[package]
name = "fuse-rm"
version = "0.1.0"
authors = ["Vasili Bulkin <bulkin@letterboxes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
fuser = "*"
argwerk = "*"
ctrlc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
