[package]
name = "fuse-rm"
version = "0.1.0"
authors = ["Vasili Bulkin <bulkin@letterboxes.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6"
lazy_static = "1.4"
libc = "*"
fuser = "*"
argwerk = "*"
ctrlc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# infer = { version = "0.5", default-features = false } For use when adding files
